<resources>
    <string name="app_name">What Does That Go With?</string>
    <string name="overlay_image">overlay image</string>
    <string name="setting_button">setting_button</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="show_debug_info">Show Debug Info</string>
    <string name="close">Close</string>
    <string name="cmy">CMY</string>
    <string name="hsv">HSV</string>
    <string name="hex">HEX</string>
    <string name="rgb">RGB</string>
    <string name="color_format">Color Format</string>
    <string name="back_camera">back camera</string>
    <string name="front_camera">front camera</string>
    <string name="camera">Camera</string>
</resources>