<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/off_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_format"
            android:textSize="16sp"
            android:textColor="@color/off_white"
            android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioHEX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/hex" />

                <RadioButton
                    android:id="@+id/radioHSV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/hsv" />

                <RadioButton
                    android:id="@+id/radioRGB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/rgb" />

                <RadioButton
                    android:id="@+id/radioCMY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/cmy" />
                <RadioButton
                    android:id="@+id/radioNCS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="NCS" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp" android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="16sp"
                android:textColor="@color/off_white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radioBACK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/back_camera" />

                <RadioButton
                    android:id="@+id/radioFRONT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/off_white"
                    android:text="@string/front_camera" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>